--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
 
             <ul class="demo-list">
-                <li class="demo-box">
+                <li class="demo-box demo1">
                     <div class="demo-hover">
                         <p class="demo-name">网站首页</p>
                         <span class="demo-icon">
@@ -84,7 +84,7 @@
                     </div>
                     <img src="images/demo1.jpg" alt="" class="demo-img"/>
                 </li>
-                <li class="demo-box">
+                <li class="demo-box demo2">
                     <div class="demo-hover">
                         <p class="demo-name">全屏网站</p>
                         <span class="demo-icon">
@@ -95,7 +95,7 @@
                     </div>
                     <img src="images/demo2.jpg" alt="" class="demo-img"/>
                 </li>
-                <li class="demo-box">
+                <li class="demo-box demo3">
                     <div class="demo-hover">
                         <p class="demo-name">基于bootstrap的网页开发</p>
                         <span class="demo-icon">
@@ -106,7 +106,7 @@
                     </div>
                     <img src="images/demo3.jpg" alt="" class="demo-img"/>
                 </li>
-                <li class="demo-box">
+                <li class="demo-box demo4">
                     <div class="demo-hover">
                         <p class="demo-name">github page</p>
                         <span class="demo-icon">
@@ -117,7 +117,7 @@
                     </div>
                     <img src="images/demo4.jpg" alt="" class="demo-img"/>
                 </li>
-                <li class="demo-box">
+                <li class="demo-box demo5">
                     <div class="demo-hover">
                         <p class="demo-name">电商首页</p>
                         <span class="demo-icon">
@@ -128,7 +128,7 @@
                     </div>
                     <img src="images/demo5.jpg" alt="" class="demo-img"/>
                 </li>
-                <li class="demo-box">
+                <li class="demo-box demo6">
                     <div class="demo-hover">
                         <p class="demo-name">更多作品敬请期待</p>
                         <span class="demo-icon">
