add photography work

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         </div>
     </div>
 
-
     <!--第二屏-->
     <div class="section section2">
         <div class="demo-content">
@@ -106,17 +105,7 @@
                     </div>
                     <img src="images/demo3.jpg" alt="" class="demo-img"/>
                 </li>
-                <li class="demo-box demo4">
-                    <div class="demo-hover">
-                        <p class="demo-name">github page</p>
-                        <span class="demo-icon">
-                            <a href="#" target="_blank" class="demo-link">
-                                <img src="images/demo-link.png" alt=""/>
-                            </a>
-                        </span>
-                    </div>
-                    <img src="images/demo4.jpg" alt="" class="demo-img"/>
-                </li>
+
                 <li class="demo-box demo5">
                     <div class="demo-hover">
                         <p class="demo-name">电商首页</p>
@@ -128,11 +117,22 @@
                     </div>
                     <img src="images/demo5.jpg" alt="" class="demo-img"/>
                 </li>
+                <li class="demo-box demo4">
+                    <div class="demo-hover">
+                        <p class="demo-name">剪辑作品</p>
+                        <span class="demo-icon">
+                            <a href="http://www.bilibili.com/video/av6225796/" target="_blank" class="demo-link">
+                                <img src="images/demo-link.png" alt=""/>
+                            </a>
+                        </span>
+                    </div>
+                    <img src="images/pr1.png" alt="" class="demo-img"/>
+                </li>
                 <li class="demo-box demo6">
                     <div class="demo-hover">
-                        <p class="demo-name">更多作品敬请期待</p>
+                        <p class="demo-name">摄影作品</p>
                         <span class="demo-icon">
-                            <a href="#" target="_blank" class="demo-link">
+                            <a href="images/photography.jpg" target="_blank" class="demo-link">
                                 <img src="images/demo-link.png" alt=""/>
                             </a>
                         </span>
@@ -179,10 +179,10 @@
     <!--第四屏-->
     <div class="section section4">
         <h1>关于我</h1>
-        <p class="cont1">“特别能吃苦”，不只是做到了前面四个 </p>
-        <p class="cont2">好奇心突破天际</p>
-        <p class="cont3">不是处女座，却在写代码时有了强迫症</p>
-        <p class="cont4">想用前端描绘出我心中的世界</p>
+        <p class="cont1">具备善良诚实上进等基本品质，是个懂礼貌的好菇凉 </p>
+        <p class="cont2">自学能力强，曾自学前端、premiere等”</p>
+        <p class="cont3">特别能吃苦”，不只是做到了前面四个字</p>
+        <p class="cont4">元气满满每一天</p>
     </div>
 </div>
 
