--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
     <!--第四屏-->
     <div class="section section4">
         <h1>关于我</h1>
-        <p class="cont1">具备善良诚实上进等基本品质，是个懂礼貌的好菇凉 </p>
-        <p class="cont2">自学能力强，曾自学前端、premiere等”</p>
-        <p class="cont3">特别能吃苦”，不只是做到了前面四个字</p>
+        <p class="cont1">具备善良诚实上进等基本品质，是个懂礼貌的好菇凉</p>
+        <p class="cont2">自学能力强，曾自学前端、premiere等</p>
+        <p class="cont3">“特别能吃苦”，不只是做到了前面四个字</p>
         <p class="cont4">元气满满每一天</p>
     </div>
 </div>
