--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
-    <title>赵卉的简历</title>
+    <title>赵的简历</title>
     <link rel="shortcut icon" href="resume.ico"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.8/jquery.fullPage.css">
     <link rel="stylesheet" href="css/index.css"/>
@@ -57,10 +57,10 @@
         </div>
 
         <div class="info" id="info">
-            <p class="info1">赵卉</p>
+            <p class="info1">赵</p>
             <p class="info2">大四应届</p>
-            <p class="info3">邮箱：zhaoui6543@163.com</p>
-            <p class="info4">手机:18435131211</p>
+            <p class="info3">邮箱：</p>
+            <p class="info4">手机:</p>
         </div>
     </div>
 
@@ -121,7 +121,7 @@
                     <div class="demo-hover">
                         <p class="demo-name">剪辑作品</p>
                         <span class="demo-icon">
-                            <a href="http://www.bilibili.com/video/av6225796/" target="_blank" class="demo-link">
+                            <a href="http://www.bilibili.com/" target="_blank" class="demo-link">
                                 <img src="images/demo-link.png" alt=""/>
                             </a>
                         </span>
