--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <div class="section active section1">
         <!--头像-->
         <div class="section1-photos" id="section1-photos">
-            <img src="images/photo1.png" class="photo1" alt=""/>
-            <img src="images/photo2.png" class="photo2" alt=""/>
+            <img src="images/logo3.png" class="photo1" alt=""/>
+            <img src="images/logo3.png" class="photo2" alt=""/>
         </div>
 
         <div class="info" id="info">
